--- a/Calc_scale_alpha.ipynb
+++ b/Calc_scale_alpha.ipynb
@@ -75,8 +75,8 @@
     "    y_fit = np.zeros_like(bins)\n",
     "    scale = 0\n",
     "    try:\n",
-    "        fit_model = Stab(dim=2)  # Choose model type (Exponential, Spherical, Gaussian, etc.)\n",
-    "        _ = fit_model.fit_variogram(bins_fit, gamma_fit, nugget=0.025,sill=0.5-0.025)#)#\n",
+    "        fit_model = gs.Spherical(dim=2)  # Choose model type (Exponential, Spherical, Gaussian, etc.)\n",
+    "        _ = fit_model.fit_variogram(bins_fit, gamma_fit)#, nugget=0.025,sill=0.5-0.025)#)#\n",
     "        y_fit = fit_model.variogram(bins)\n",
     "        scale = fit_model.len_scale\n",
     "        \n",
@@ -84,7 +84,9 @@
     "        ## in case the variogram fit did not work\n",
     "        ## this is usually a very small case\n",
     "        ## mark it with -1 for later\n",
-    "        y_fit = np.zeros_like(bins)\n",
+    "        y_fit = np.zeros_like(bins).astype(float)\n",
+    "        y_fit[:]= np.nan\n",
+    "        \n",
     "        scale = -1\n",
     "    return y_fit, scale"
    ]
@@ -109,7 +111,9 @@
     "    \n",
     "    ## in case all NaNs occured\n",
     "    if len(gamma_fit1)<=2:\n",
-    "        y_fit = np.zeros_like(bins)\n",
+    "        y_fit = np.zeros_like(bins).astype(float)\n",
+    "        # y_fit[:]= np.nan\n",
+    "        \n",
     "        scale = 0\n",
     "    else:\n",
     "        ## make sure this starts with zeros\n",
@@ -122,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "c27ed9e4-27ab-4beb-a62e-423b9b00f1fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/all_AU_p90_qc/*pair_bins*.csv\"))"
+    "files = sorted(glob(\"./data/all_AU_p90_1960_500km/*_pair_bins*.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "bf94e8af-9c1c-4a5d-b6c6-178771fca224",
    "metadata": {},
    "outputs": [
@@ -140,25 +144,23 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting semi-variogram: 100%|██████████| 252/252 [00:00<00:00, 865.78it/s]\n"
+      "  1%|          | 13/2078 [00:15<40:44,  1.18s/it]"
      ]
     }
    ],
    "source": [
-    "for file in files:\n",
-    "    if not os.path.exists(file.replace(\"bins\",\"scale\")):\n",
+    "for file in tqdm(files, position=0, leave=True):\n",
+    "    if not os.path.exists(file.replace(\"bins\",\"scale_spherical\")):\n",
     "        df_bins = pd.read_csv(file, usecols=lambda col: not col.startswith(\"Unnamed\"))\n",
+    "        # df_bins = df_bins[df_bins[\"Bins\"]<=501].reset_index()\n",
     "        args_list = [(df_bins[df_bins[\"Day\"]==day][\"N11\"].values,df_bins[df_bins[\"Day\"]==day][\"N10\"].values,\n",
     "                  df_bins[df_bins[\"Day\"]==day][\"gamma\"].values,df_bins[df_bins[\"Day\"]==day][\"Bins\"].values,) for day in np.unique(df_bins[\"Day\"])]\n",
     "        ## multi-processing the extreme days\n",
-    "        max_pool =24\n",
+    "        max_pool =28\n",
     "        with Pool(max_pool) as p:\n",
-    "            pool_outputs = list(tqdm(\n",
+    "            pool_outputs = list(\n",
     "                    p.imap(gamma_to_alpha,\n",
     "                           args_list),\n",
-    "                total=len(args_list),\n",
-    "                position=0, leave=True,  desc=\"Fitting semi-variogram\",\n",
-    "            )\n",
     "            )\n",
     "        p.join()\n",
     "        ## save output\n",
@@ -172,18 +174,10 @@
     "        df_bins.to_csv(file)\n",
     "        scale_dict = {\"extreme_dates\": np.unique(df_bins[\"Date\"]), \"scale\": scale_list}\n",
     "        df_scale = pd.DataFrame.from_dict(scale_dict)\n",
-    "        df_scale.to_csv(file.replace(\"bins\",\"scale\"))\n",
+    "        df_scale.to_csv(file.replace(\"bins\",\"scale_spherical\"))\n",
     "        \n",
     "        clear_output(wait=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2cad130f-133d-48de-a118-1c7692c1d441",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
