--- a/Moving_semi_variogram_season-1960.ipynb
+++ b/Moving_semi_variogram_season-1960.ipynb
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "ba3b1703-90f6-432e-aee4-2cae9d0ff7d2",
    "metadata": {},
    "outputs": [
@@ -305,22 +305,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2250 stations in the list\n"
+      "2102 stations in the list\n"
      ]
     }
    ],
    "source": [
     "## for stations to be a neighbour station\n",
-    "df_neighbour = df[(df[\"Start_Year\"]<=1960) &(df[\"End_Year\"]>=2022)]\n",
+    "df_neighbour = df[(df[\"Start_Year\"]<=1960) &(df[\"End_Year\"]>=2023)]\n",
     "## for stations to be a station to do semi-variogram\n",
-    "df_spec = df[(df[\"Start_Year\"]<=1960) &(df[\"End_Year\"]>=2022)]\n",
+    "df_spec = df[(df[\"Start_Year\"]<=1960) &(df[\"End_Year\"]>=2023)]\n",
     "id_list = list(df_spec[\"ID\"])\n",
     "print(f\"{len(id_list)} stations in the list\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "07cf48db-82b7-4b64-be73-4cc30ab09494",
    "metadata": {},
    "outputs": [],
@@ -329,15 +329,15 @@
     "# pc_str = \"P90\" ## this is for the neighbours in the dataframe\n",
     "df_pc = pd.read_csv(\"./data/BoM_stn_p90_season.csv\", index_col=0)\n",
     "max_pool = 28 ## number of CPUs for processing\n",
-    "max_radius = 700 ## for moving neighbours\n",
-    "inside_radius = 350\n",
+    "max_radius = 1000 ## for moving neighbours\n",
+    "inside_radius = 500\n",
     "start_date = \"1960-01-01\"\n",
-    "end_date = \"2022-12-31\""
+    "end_date = \"2023-12-31\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "bdb83478-ff67-4a63-88e7-a3080c03aa3f",
    "metadata": {},
    "outputs": [
@@ -345,97 +345,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing station 14092\n",
-      "Processing station 15590\n",
-      "Processing station 15585\n",
-      "Processing station 15081\n",
-      "Processing station 15594\n",
       "Processing station 27000\n",
-      "Processing station 11017\n",
       "Processing station 27031\n",
-      "Processing station 38000\n",
-      "Processing station 3030\n",
-      "Processing station 38002\n",
-      "Processing station 15631\n",
-      "Processing station 3003\n",
-      "Processing station 15085\n",
-      "Processing station 3040\n",
-      "Processing station 13015\n",
-      "Processing station 14830\n",
-      "Processing station 14927\n",
-      "Processing station 38005\n",
       "Processing station 200284\n",
-      "Processing station 18110\n",
       "Processing station 15511\n",
-      "Processing station 14626\n",
       "Processing station 14015\n",
       "Processing station 14163\n",
       "Processing station 300000\n",
-      "Processing station 3032\n",
-      "Processing station 12027\n",
-      "Processing station 15131\n",
-      "Processing station 15574\n",
       "Processing station 11003\n",
       "Processing station 11019\n",
       "Processing station 13017\n",
-      "Processing station 15523\n",
-      "Processing station 13002\n",
-      "Processing station 38009\n",
       "Processing station 14508\n",
-      "Processing station 15553\n",
-      "Processing station 16083\n",
-      "Processing station 15015\n",
-      "Processing station 15531\n",
-      "Processing station 15524\n",
-      "Processing station 17028\n",
-      "Processing station 17089\n",
-      "Processing station 14902\n",
-      "Processing station 3010\n",
-      "Processing station 29038\n",
-      "Processing station 15537\n",
-      "Processing station 14829\n",
-      "Processing station 14612\n",
-      "Processing station 12045\n",
       "Processing station 28008\n",
       "Processing station 300004\n",
-      "Processing station 18114\n",
-      "Processing station 14610\n",
-      "Processing station 3015\n",
       "Processing station 27044\n",
       "Processing station 14090\n",
       "Processing station 27015\n",
-      "Processing station 17070\n",
       "Processing station 11008\n",
-      "Processing station 17020\n",
       "Processing station 15518\n",
-      "Processing station 15086\n",
       "Processing station 200288\n",
-      "Processing station 18106\n",
-      "Processing station 14621\n",
-      "Processing station 14933\n",
       "Processing station 14263\n",
-      "Processing station 38020\n",
-      "Processing station 29110\n",
-      "Processing station 2029\n",
-      "Processing station 15521\n",
-      "Processing station 14925\n",
-      "Processing station 15619\n",
-      "Processing station 16047\n",
       "Processing station 1007\n",
-      "Processing station 3024\n",
-      "Processing station 15623\n",
-      "Processing station 15624\n",
       "Processing station 13011\n",
       "Processing station 14401\n",
-      "Processing station 27042\n",
-      "Processing station 200283\n",
-      "Processing station 15626\n"
+      "Processing station 27042\n"
      ]
     }
    ],
    "source": [
     "for spec_id in id_list:\n",
-    "    csv_file = f\"./data/all_AU_p90_1960/{spec_id}_station_moving_list_all_events.csv\"\n",
+    "    csv_file = f\"./data/all_AU_p90_1960_500km/{spec_id}_station_moving_list_all_events.csv\"\n",
     "    ## do semi-variogram if file not exists\n",
     "    if not os.path.exists(csv_file):\n",
     "        print(f\"Processing station {spec_id}\")\n",
