--- a/Moving_semi_variogram_season-Batch2.ipynb
+++ b/Moving_semi_variogram_season-Batch2.ipynb
@@ -329,13 +329,13 @@
     "# pc_str = \"P90\" ## this is for the neighbours in the dataframe\n",
     "df_pc = pd.read_csv(\"./data/BoM_stn_p90_season.csv\", index_col=0)\n",
     "max_pool = 28 ## number of CPUs for processing\n",
-    "max_radius = 700 ## for moving neighbours\n",
-    "inside_radius = 350"
+    "max_radius = 1000 ## for moving neighbours\n",
+    "inside_radius = 500"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "bdb83478-ff67-4a63-88e7-a3080c03aa3f",
    "metadata": {},
    "outputs": [
@@ -343,32 +343,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing station 200786\n",
-      "Processing station 300017\n",
-      "Processing station 200790\n",
-      "Processing station 200284\n",
-      "Processing station 27008\n",
-      "Processing station 27009\n",
-      "Processing station 300000\n",
-      "Processing station 13017\n",
-      "Processing station 200733\n",
-      "Processing station 200440\n",
-      "Processing station 200389\n",
-      "Processing station 200375\n",
-      "Processing station 200839\n",
-      "Processing station 300004\n",
-      "Processing station 200825\n",
-      "Processing station 200288\n",
-      "Processing station 200304\n",
-      "Processing station 27018\n",
-      "Processing station 13011\n",
-      "Processing station 200283\n"
+      "Processing station 80095\n",
+      "Look through neighbour stations\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 5088/5088 [00:12<00:00, 422.27it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calc station distance\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 331/331 [00:00<00:00, 2229.06it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Save to CSV\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 331/331 [00:02<00:00, 148.47it/s]\n"
      ]
     }
    ],
    "source": [
-    "for spec_id in id_list:\n",
-    "    csv_file = f\"./data/all_AU_p90_qc/{spec_id}_station_moving_list_all_events.csv\"\n",
+    "for spec_id in id_list[3000:]:\n",
+    "    csv_file = f\"./data/all_AU_p90_500km/{spec_id}_station_moving_list_all_events.csv\"\n",
     "    ## do semi-variogram if file not exists\n",
     "    if not os.path.exists(csv_file):\n",
     "        print(f\"Processing station {spec_id}\")\n",
@@ -524,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8c6b6eb-4c41-4bbe-88a9-bf9981c30bf6",
+   "id": "741b8c3c-045c-4389-974f-9620c6bcece1",
    "metadata": {},
    "outputs": [],
    "source": []
