--- a/Semi-Variogram_Pairing-Batch2.ipynb
+++ b/Semi-Variogram_Pairing-Batch2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "da1ba636-485e-4743-8d7c-70f48e5c90d8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "4510116d-bfa0-4d9d-a012-249165b6ceef",
    "metadata": {},
    "outputs": [],
@@ -52,20 +52,20 @@
     "\n",
     "def calculate_moving_pairs(args):\n",
     "    df_nb, bins, days = args\n",
-    "    df = df_nb[df_nb['distance']<=350]\n",
+    "    df = df_nb[df_nb['distance']<=500]\n",
     "    if len(df[df[\"val\"]>=0]) == 0:\n",
     "        N11 = np.zeros_like(bins)\n",
     "        N10 = np.zeros_like(bins)\n",
     "        return N11, N10\n",
     "    else:\n",
-    "        ## must have more than 5% stations had extremes\n",
-    "        if df[\"flag\"].max() <=0 or len(df[df[\"flag\"]>0])/len(df[df[\"val\"]>=0])<0.05:\n",
+    "        ## must have more than 10% stations had extremes\n",
+    "        if df[\"flag\"].max() <=0 or len(df[df[\"flag\"]>0])/len(df[df[\"val\"]>=0])<0.1 or len(df)<20:\n",
     "            N11 = np.zeros_like(bins)\n",
     "            N10 = np.zeros_like(bins)\n",
     "            return N11, N10\n",
     "        else: \n",
     "            # Append the center station's flag\n",
-    "            in_out_arr = np.append(1, np.where(df_nb['distance'] > 350, 0, 1))\n",
+    "            in_out_arr = np.append(1, np.where(df_nb['distance'] > 500, 0, 1))\n",
     "           \n",
     "            ## inside is 1\n",
     "            ## outside is 0\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cc6cdd52-ee6a-4c15-9893-60658929b6ad",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e77acb86-72ef-4977-b576-1722d34faac9",
    "metadata": {},
    "outputs": [
@@ -123,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 34s, sys: 6.88 s, total: 2min 41s\n",
-      "Wall time: 2min 43s\n"
+      "CPU times: user 1min 47s, sys: 6.7 s, total: 1min 53s\n",
+      "Wall time: 1min 54s\n"
      ]
     }
    ],
@@ -135,23 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "3c8f1c44-2ac0-4dc4-b351-43607a644432",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/all_AU_p90_qc/*_station_moving_list_all_events.csv\"))"
+    "files = sorted(glob(\"./data/all_AU_p90_500km/*_station_moving_list_all_events.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "7310ad7c-6fab-4ba8-a92c-62f5caf316f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define distance bins\n",
-    "bins = np.arange(1, 720, 20)\n"
+    "bins = np.arange(1, 1525, 25)\n"
    ]
   },
   {
@@ -164,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Extreme days: 100%|██████████| 131/131 [00:00<00:00, 134.42it/s]\n"
+      "./data/all_AU_p90_500km/75011_station_moving_list_all_events.csv:   0%|          | 0/72 [00:00<?, ?it/s]"
      ]
     }
    ],
@@ -180,7 +180,7 @@
     "                    p.imap(calculate_moving_pairs,\n",
     "                           args_list),\n",
     "                total=len(args_list),\n",
-    "                position=0, leave=True,  desc=\"Processing Extreme days\",\n",
+    "                position=0, leave=True,  desc=file,\n",
     "            )\n",
     "            )\n",
     "        p.join()\n",
@@ -206,8 +206,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "78792fce-f8af-4cac-9d06-bedd82e8c3ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'./data/all_AU_p90_500km/46002_station_moving_list_all_events.csv'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f257521e-fcea-4b14-8315-03320d4837fc",
    "metadata": {},
    "outputs": [],
    "source": []
