--- a/Semi-Variogram_Pairing.ipynb
+++ b/Semi-Variogram_Pairing.ipynb
@@ -52,20 +52,20 @@
     "\n",
     "def calculate_moving_pairs(args):\n",
     "    df_nb, bins, days = args\n",
-    "    df = df_nb[df_nb['distance']<=350]\n",
+    "    df = df_nb[df_nb['distance']<=500]\n",
     "    if len(df[df[\"val\"]>=0]) == 0:\n",
     "        N11 = np.zeros_like(bins)\n",
     "        N10 = np.zeros_like(bins)\n",
     "        return N11, N10\n",
     "    else:\n",
-    "        ## must have more than 5% stations had extremes\n",
-    "        if df[\"flag\"].max() <=0 or len(df[df[\"flag\"]>0])/len(df[df[\"val\"]>=0])<0.05:\n",
+    "        ## must have more than 10% stations had extremes\n",
+    "        if df[\"flag\"].max() <=0 or len(df[df[\"flag\"]>0])/len(df[df[\"val\"]>=0])<0.1 or len(df)<20:\n",
     "            N11 = np.zeros_like(bins)\n",
     "            N10 = np.zeros_like(bins)\n",
     "            return N11, N10\n",
     "        else: \n",
     "            # Append the center station's flag\n",
-    "            in_out_arr = np.append(1, np.where(df_nb['distance'] > 350, 0, 1))\n",
+    "            in_out_arr = np.append(1, np.where(df_nb['distance'] > 500, 0, 1))\n",
     "           \n",
     "            ## inside is 1\n",
     "            ## outside is 0\n",
@@ -123,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2min 19s, sys: 6.48 s, total: 2min 26s\n",
-      "Wall time: 2min 26s\n"
+      "CPU times: user 1min 55s, sys: 7.07 s, total: 2min 2s\n",
+      "Wall time: 2min 4s\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/all_AU_p90_1960/*_station_moving_list_all_events.csv\"))"
+    "files = sorted(glob(\"./data/all_AU_p90_1960_500km/*_station_moving_list_all_events.csv\"))"
    ]
   },
   {
@@ -151,12 +151,12 @@
    "outputs": [],
    "source": [
     "# Define distance bins\n",
-    "bins = np.arange(1, 720, 20)\n"
+    "bins = np.arange(1,520,25)# np.arange(1, 1525, 25)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "1542454b-ba67-4081-b04f-95bb09361548",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing Extreme days: 100%|██████████| 274/274 [00:00<00:00, 303.05it/s]\n"
+      "./data/all_AU_p90_1960_500km/99005_station_moving_list_all_events.csv: 100%|██████████| 629/629 [00:03<00:00, 188.57it/s]\n"
      ]
     }
    ],
@@ -180,7 +180,7 @@
     "                    p.imap(calculate_moving_pairs,\n",
     "                           args_list),\n",
     "                total=len(args_list),\n",
-    "                position=0, leave=True,  desc=\"Processing Extreme days\",\n",
+    "                position=0, leave=True,  desc=file,\n",
     "            )\n",
     "            )\n",
     "        p.join()\n",
