clean up source

--- a/Calc_scale_alpha-1960.ipynb
+++ b/Calc_scale_alpha-1960.ipynb
@@ -122,43 +122,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "c27ed9e4-27ab-4beb-a62e-423b9b00f1fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/all_AU_p90_1980/*pair_bins*.csv\"))"
+    "files = sorted(glob(\"./data/seasonal_p90_500km_1960/*pair_bins*.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf94e8af-9c1c-4a5d-b6c6-178771fca224",
+   "execution_count": 15,
+   "id": "fd3554a6-b71c-473c-b05d-b6292121834f",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Fitting semi-variogram:  88%|████████▊ | 164/187 [00:00<00:00, 797.22it/s]"
+      "100%|██████████| 2078/2078 [43:21<00:00,  1.25s/it]\n"
      ]
     }
    ],
    "source": [
-    "for file in files:\n",
-    "    if not os.path.exists(file.replace(\"bins\",\"scale\")):\n",
+    "for file in tqdm(files, position=0, leave=True):\n",
+    "    if not os.path.exists(file.replace(\"bins\",\"scale_spherical\")):\n",
     "        df_bins = pd.read_csv(file, usecols=lambda col: not col.startswith(\"Unnamed\"))\n",
+    "        # df_bins = df_bins[df_bins[\"Bins\"]<=501].reset_index()\n",
     "        args_list = [(df_bins[df_bins[\"Day\"]==day][\"N11\"].values,df_bins[df_bins[\"Day\"]==day][\"N10\"].values,\n",
     "                  df_bins[df_bins[\"Day\"]==day][\"gamma\"].values,df_bins[df_bins[\"Day\"]==day][\"Bins\"].values,) for day in np.unique(df_bins[\"Day\"])]\n",
     "        ## multi-processing the extreme days\n",
-    "        max_pool =24\n",
+    "        max_pool =28\n",
     "        with Pool(max_pool) as p:\n",
-    "            pool_outputs = list(tqdm(\n",
+    "            pool_outputs = list(\n",
     "                    p.imap(gamma_to_alpha,\n",
     "                           args_list),\n",
-    "                total=len(args_list),\n",
-    "                position=0, leave=True,  desc=\"Fitting semi-variogram\",\n",
-    "            )\n",
     "            )\n",
     "        p.join()\n",
     "        ## save output\n",
@@ -172,7 +170,7 @@
     "        df_bins.to_csv(file)\n",
     "        scale_dict = {\"extreme_dates\": np.unique(df_bins[\"Date\"]), \"scale\": scale_list}\n",
     "        df_scale = pd.DataFrame.from_dict(scale_dict)\n",
-    "        df_scale.to_csv(file.replace(\"bins\",\"scale\"))\n",
+    "        df_scale.to_csv(file.replace(\"bins\",\"scale_spherical\"))\n",
     "        \n",
     "        clear_output(wait=True)"
    ]
