--- a/Calc_scale_alpha_no10.ipynb
+++ b/Calc_scale_alpha_no10.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "436a4297-9a1d-4861-bd56-189e18222dfa",
    "metadata": {},
    "outputs": [],
@@ -85,7 +85,7 @@
     "        ## this is usually a very small case\n",
     "        ## mark it with -1 for later\n",
     "        y_fit = np.zeros_like(bins).astype(float)\n",
-    "        y_fit[:]= np.nan\n",
+    "        # y_fit[:]= np.nan\n",
     "        \n",
     "        scale = -1\n",
     "    return y_fit, scale"
@@ -126,17 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "id": "c27ed9e4-27ab-4beb-a62e-423b9b00f1fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/seasonal_p90_500km/*_pair_bins*.csv\"))"
+    "files = sorted(glob(\"./data/no_10percent/*_pair_bins*.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "bf94e8af-9c1c-4a5d-b6c6-178771fca224",
    "metadata": {},
    "outputs": [
@@ -144,13 +144,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1/1 [00:01<00:00,  1.80s/it]\n"
+      " 30%|███       | 2998/9847 [01:42<1:11:50,  1.59it/s]"
      ]
     }
    ],
    "source": [
     "for file in tqdm(files, position=0, leave=True):\n",
-    "    # if not os.path.exists(file.replace(\"bins\",\"scale_spherical\")):\n",
+    "    if not os.path.exists(file.replace(\"bins\",\"scale_spherical\")):\n",
     "        df_bins = pd.read_csv(file, usecols=lambda col: not col.startswith(\"Unnamed\"))\n",
     "        # df_bins = df_bins[df_bins[\"Bins\"]<=501].reset_index()\n",
     "        args_list = [(df_bins[df_bins[\"Day\"]==day][\"N11\"].values,df_bins[df_bins[\"Day\"]==day][\"N10\"].values,\n",
