--- a/Moving_semi_variogram_season-1960.ipynb
+++ b/Moving_semi_variogram_season-1960.ipynb
@@ -146,10 +146,11 @@
     "    ds = ds.assign_coords(month=ds['time'].dt.month)\n",
     "\n",
     "    rainy_days = ds[var_name].where(ds[var_name] > 1, drop=True)\n",
-    "    p90_monthly = rainy_days.groupby('month').quantile(percentile, dim='time', skipna=True)\n",
+    "    # percentile should be in [0, 1] for xarray.quantile (e.g., 0.90)\n",
+    "    p90_seasonal = rainy_days.groupby('time.season').quantile(percentile, dim='time', skipna=True)\n",
     "    \n",
-    "    # Find days where precipitation > P90 for the corresponding month and station\n",
-    "    exceeds_p90 = ds[var_name].groupby('time.month') >= p90_monthly\n",
+    "    # Flag days where pr > seasonal P90 for the corresponding season & station\n",
+    "    exceeds_p90 = ds[var_name].groupby('time.season') >= p90_seasonal\n",
     "    \n",
     "    # Filter the dataset to include only days where precipitation > P90\n",
     "    ds_exceeds_p90 = ds.where(exceeds_p90)\n",
@@ -297,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "ba3b1703-90f6-432e-aee4-2cae9d0ff7d2",
    "metadata": {},
    "outputs": [
@@ -320,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "07cf48db-82b7-4b64-be73-4cc30ab09494",
    "metadata": {},
    "outputs": [],
@@ -337,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "bdb83478-ff67-4a63-88e7-a3080c03aa3f",
    "metadata": {},
    "outputs": [
@@ -374,7 +375,7 @@
    ],
    "source": [
     "for spec_id in id_list:\n",
-    "    csv_file = f\"./data/all_AU_p90_1960_500km/{spec_id}_station_moving_list_all_events.csv\"\n",
+    "    csv_file = f\"./data/seasonal_p90_500km_1960/{spec_id}_station_moving_list_all_events.csv\"\n",
     "    ## do semi-variogram if file not exists\n",
     "    if not os.path.exists(csv_file):\n",
     "        print(f\"Processing station {spec_id}\")\n",
