--- a/Semi-Variogram_Pairing_1960.ipynb
+++ b/Semi-Variogram_Pairing_1960.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "da1ba636-485e-4743-8d7c-70f48e5c90d8",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "4510116d-bfa0-4d9d-a012-249165b6ceef",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
     "            N10 = np.zeros_like(bins, dtype=int)\n",
     "            \n",
     "            # Precompute bin indices for all pairs\n",
-    "            bin_indices = np.digitize(distances, bins,right=False) - 1\n",
+    "            bin_indices = np.digitize(distances, bins) - 1\n",
     "            \n",
     "            # Create masks for valid bin indices\n",
     "            valid_mask = (bin_indices >= 0) & (bin_indices < len(bins))\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "cc6cdd52-ee6a-4c15-9893-60658929b6ad",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "e77acb86-72ef-4977-b576-1722d34faac9",
    "metadata": {},
    "outputs": [
@@ -123,8 +123,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 47s, sys: 6.52 s, total: 1min 53s\n",
-      "Wall time: 1min 54s\n"
+      "CPU times: user 1min 57s, sys: 6.99 s, total: 2min 4s\n",
+      "Wall time: 2min 5s\n"
      ]
     }
    ],
@@ -135,17 +135,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "3c8f1c44-2ac0-4dc4-b351-43607a644432",
    "metadata": {},
    "outputs": [],
    "source": [
-    "files = sorted(glob(\"./data/seasonal_p90_500km/*_station_moving_list_all_events.csv\"))"
+    "files = sorted(glob(\"./data/seasonal_p90_500km_1960/*_station_moving_list_all_events.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "id": "7310ad7c-6fab-4ba8-a92c-62f5caf316f8",
    "metadata": {},
    "outputs": [],
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "1542454b-ba67-4081-b04f-95bb09361548",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "./data/seasonal_p90_500km/82110_station_moving_list_all_events.csv: 100%|██████████| 103/103 [00:04<00:00, 23.64it/s]\n"
+      "./data/seasonal_p90_500km_1960/10002_station_moving_list_all_events.csv: 100%|██████████| 286/286 [00:00<00:00, 327.07it/s]\n"
      ]
     }
    ],
@@ -208,16 +208,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "78792fce-f8af-4cac-9d06-bedd82e8c3ba",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"hi\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31332e12-5bf4-4625-baa1-604097a4a245",
    "metadata": {},
    "outputs": [],
    "source": []
