--- a/pre_process_BoM/Find_p90_seasonal.ipynb
+++ b/pre_process_BoM/Find_p90_seasonal.ipynb
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "c2051083-671d-4b53-a844-6c5a63ffcc9b",
    "metadata": {},
    "outputs": [],
    "source": [
     "## daily\n",
-    "df = pd.read_csv(\"./data/BoM_daily_stations.csv\")\n",
+    "df = pd.read_csv(\"./data/BoM_daily_stations_500km.csv\")\n",
     "## mannually remove some faulty stations\n",
     "df = df[(df['ID'] != 40592) & (df['ID'] != 40593) & (df['ID'] != 58090) & (df[\"End_Year\"]>=1960)]\n",
     "daily_lat = []\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "26efea0e-545a-4a7b-b85f-7d0e7a124703",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "e5efb7ba-186a-4e05-a20c-86f141d9f766",
    "metadata": {},
    "outputs": [
@@ -69,18 +69,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 9881/9881 [15:16<00:00, 10.78it/s] \n"
+      "100%|██████████| 9835/9835 [12:20<00:00, 13.29it/s]  \n"
      ]
     }
    ],
    "source": [
     "# Dictionary to store 90th percentile values for each month\n",
-    "stn_bom_p90 = {\"ID\": [], \"Jan\": [], \"Feb\": [], \"Mar\": [], \"Apr\": [], \"May\": [], \"Jun\": [],\n",
-    "               \"Jul\": [], \"Aug\": [], \"Sep\": [], \"Oct\": [], \"Nov\": [], \"Dec\": []}\n",
+    "stn_bom_p90 = {\"ID\": [], \"DJF\": [], \"MAM\": [], \"JJA\": [], \"SON\": []}\n",
     "\n",
     "faulty_stn = []\n",
     "\n",
-    "for stn_id in tqdm(df_neighbour[\"ID\"], leave=True, position=0):\n",
+    "for stn_id in tqdm(df[\"ID\"], leave=True, position=0):\n",
     "    bom_id = str(stn_id).zfill(6)\n",
     "    \n",
     "    try:\n",
@@ -97,25 +96,24 @@
     "    # If there are no rainy days, store -1 for all months\n",
     "    if len(rainy_days) == 0:\n",
     "        stn_bom_p90[\"ID\"].append(stn_id)\n",
-    "        for month in [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]:\n",
+    "        for month in [\"DJF\", \"MAM\", \"JJA\", \"SON\"]:\n",
     "            stn_bom_p90[month].append(-1)\n",
     "    else:\n",
     "        stn_bom_p90[\"ID\"].append(stn_id)\n",
-    "\n",
+    "        p90_season = rainy_days.groupby('time.season').quantile(percentile, dim='time', skipna=True)\n",
     "        # Store results for each month\n",
-    "        for month_num, month_name in enumerate([\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \n",
-    "                                                \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"], start=1):\n",
+    "        for season_num, season_name in enumerate([\"DJF\", \"MAM\", \"JJA\", \"SON\"], start=1):\n",
     "            try:\n",
-    "                stn_bom_p90[month_name].append(percentile_90_monthly.sel(month=month_num).values)\n",
+    "                stn_bom_p90[season_name].append(p90_season.sel(season=season_name).values)\n",
     "            except:\n",
-    "                stn_bom_p90[month_name].append(-1)\n",
+    "                stn_bom_p90[season_name].append(-1)\n",
     "\n",
     "    ds.close()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "f51db57a-31b2-43a5-bd47-c8423d40e140",
    "metadata": {},
    "outputs": [],
@@ -125,12 +123,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "a8a429fb-3a67-4300-a818-0119d5158c38",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_p90.to_csv(\"./data/BoM_stn_p90_monthly.csv\")"
+    "df_p90.to_csv(\"./data/BoM_stn_p90_seasonally.csv\")"
    ]
   },
   {
