--- a/Moving_semi_variogram_seasonal_p90.ipynb
+++ b/Moving_semi_variogram_seasonal_p90.ipynb
@@ -182,13 +182,13 @@
     "        return extreme_val.flatten(), extreme_flag.flatten(), extreme_pc.flatten()\n",
     "    \n",
     "    else:\n",
-    "        p90_monthly = rainy_days.groupby('time.month').quantile(percentile, dim='time', skipna=True)\n",
+    "        p90_season = rainy_days.groupby('time.season').quantile(percentile, dim='time', skipna=True)\n",
     "        precip_da = ds_search[\"prcp\"].sel(time=extreme_dates)\n",
     "        extreme_val = precip_da.copy()\n",
     "        extreme_flag = precip_da.copy()\n",
     "        extreme_pc = ds_search[\"percentile\"].sel(time=extreme_dates)\n",
     "        \n",
-    "        extreme_flag = extreme_flag.where(extreme_val.groupby('time.month') >= p90_monthly, 0)\n",
+    "        extreme_flag = extreme_flag.where(extreme_val.groupby('time.season') >= p90_season, 0)\n",
     "        extreme_flag = extreme_flag.where(extreme_val != -1, -1)\n",
     "        \n",
     "        \n",
